# Weather-server

./: README.md  Weather-server.cabal  hie.yaml  package.yaml  stack.yaml
libs/server/: LICENSE  package.yaml  server.cabal  stack.yaml
libs/server/lib/: Config.hs  Lib.hs  Logger.hs
libs/server/lib/Server/: App.hs  Cache.hs  ExternalAPI.hs  Tests.hs
src/: Main.hs
