name:                server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/server#readme
license:             MIT
license-file:        LICENSE
author:              Kovalev Dmitry
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , servant
                     , servant-server
                     , http-conduit
                     , http-client
                     , aeson
                     , warp
                     , wai
                     , stm
                     , transformers
                     , time
                     , exceptions
                     , yaml
                     , directory
  default-language:    Haskell2010
